--- a/project2.html
+++ b/project2.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a class="nav-pill" href="index.html">Home</a></li>
         <li><a class="nav-pill" href="project1.html">EDESim</a></li>
-        <li><a class="nav-pill" href="project2.html" aria-current="page">Project 2</a></li>
+        <li><a class="nav-pill" href="project2.html" aria-current="page">TAM</a></li>
       </ul>
     </nav>
   </header>
