Update index.html Project 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a class="nav-pill" href="index.html" aria-current="page">Home|Resume</a></li>
         <li><a class="nav-pill" href="project1.html">EDESim</a></li>
-        <li><a class="nav-pill" href="project2.html">Project 2</a></li>
+        <li><a class="nav-pill" href="project2.html">TAM</a></li>
       </ul>
     </nav>    
 
@@ -100,7 +100,7 @@
           <article class="project-card">
             <img src="assets/images/project2.jpg" alt="Screenshot representing Project 2" />
             <div>
-              <h3><a href="project2.html">Project 2 Title</a></h3>
+              <h3><a href="project2.html">Tiny Accumulator Machine (TAM)</a></h3>
               <p><!-- TODO: 1–2 sentence description. --></p>
               <ul class="badges">
                 <li>HTML5</li><li>CSS3</li><li>Responsive</li><li>Accessibility</li><li>GitHub Pages</li>
