Update index.html title

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
   <header class="site-header" role="banner">
     <div class="brand">
-      <h1 class="site-title">Sthefanny Silva</h1>
+      <h1 class="site-title">Sthefanny Silva Resume</h1>
     </div>
 
     <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
       <ul>
-        <li><a class="nav-pill" href="index.html" aria-current="page">Home|Resume</a></li>
+        <li><a class="nav-pill" href="index.html" aria-current="page">Home</a></li>
         <li><a class="nav-pill" href="project1.html">EDESim</a></li>
         <li><a class="nav-pill" href="project2.html">TAM</a></li>
       </ul>
