Update index.html project 2 skills

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
           </article>
           <article class="project-card">
             <img src="assets/images/project2.jpg" alt="Screenshot representing Project 2" />
-            <div>
+             <div>
               <h3><a href="project2.html">Tiny Accumulator Machine (TAM)</a></h3>
-              <p><!-- TODO: 1–2 sentence description. --></p>
+              <p>Two-word instruction virtual machine in C (ACC, PC, RAM; arithmetic & control flow).</p>
               <ul class="badges">
-                <li>HTML5</li><li>CSS3</li><li>Responsive</li><li>Accessibility</li><li>GitHub Pages</li>
+                <li>C</li><li>Virtual Machine</li><li>Two-Word ISA</li><li>Emulator</li><li>File I/O</li>
               </ul>
             </div>
           </article>
