Update index.html project 2 description

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section aria-labelledby="experience-heading" class="card">
         <h2 id="experience-heading">Relevant Experience</h2>
-        <!-- TODO: Replace bullets/dates or remove section if none -->
+
         <article class="job">
           <h3>Data Analysis Intern — DEVCOM Army <span class="dates"><!-- Dates --></span></h3>
           <ul>
@@ -87,10 +87,9 @@
             <img src="assets/images/project1.jpg" alt="Screenshot representing Project 1" />
             <div>
               <h3><a href="project1.html">Event-Driven Enterprise Simulator (EDESim)</a></h3>
-              <p><!-- TODO: 1–2 sentence description. -->
-                A discrete-event simulation of enterprise operations. A small point-of-sale simulation for “Nile Dot Com.” 
-                Users look up items by ID from an inventory file, validate stock and quantity, add up to five items to a cart, 
-                apply tiered discounts and 6% tax, generate an invoice, and log each order to transactions.csv with a unique timestamped ID.
+              <p>
+                Implemented a Tiny Accumulator Machine (TAM) virtual machine in C using a two-word instruction set (opcode + operand). 
+                The VM tracks PC/ACC/RAM state and executes arithmetic and control-flow instructions, loading user programs and stepping through execution with clear state updates.
               </p>
               <ul class="badges">
                 <li>Java</li><li>Event-Driven</li><li>CSV I/O</li><li>Discounts/Tax</li><li>Transactions Log</li>
