Update index.html mistake fix project 2 onto project 1

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
             <div>
               <h3><a href="project1.html">Event-Driven Enterprise Simulator (EDESim)</a></h3>
               <p>
-                Implemented a Tiny Accumulator Machine (TAM) virtual machine in C using a two-word instruction set (opcode + operand). 
-                The VM tracks PC/ACC/RAM state and executes arithmetic and control-flow instructions, loading user programs and stepping through execution with clear state updates.
+                rewrite description.
               </p>
               <ul class="badges">
                 <li>Java</li><li>Event-Driven</li><li>CSV I/O</li><li>Discounts/Tax</li><li>Transactions Log</li>
@@ -100,7 +99,8 @@
             <img src="assets/images/project2.jpg" alt="Screenshot representing Project 2" />
              <div>
               <h3><a href="project2.html">Tiny Accumulator Machine (TAM)</a></h3>
-              <p>Two-word instruction virtual machine in C (ACC, PC, RAM; arithmetic & control flow).</p>
+              <p>Implemented a Tiny Accumulator Machine (TAM) virtual machine in C using a two-word instruction set (opcode + operand). 
+                The VM tracks PC/ACC/RAM state and executes arithmetic and control-flow instructions, loading user programs and stepping through execution with clear state updates.</p>
               <ul class="badges">
                 <li>C</li><li>Virtual Machine</li><li>Two-Word ISA</li><li>Emulator</li><li>File I/O</li>
               </ul>
