--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
             <div>
               <h3><a href="project1.html">Event-Driven Enterprise Simulator (EDESim)</a></h3>
               <p>
-                rewrite description.
+                A discrete-event simulation of enterprise operations. 
+                A small point-of-sale simulation for "Nile Dot Com." 
+                Users look up items by ID from an inventory file, validate stock and quantity, add up to five items to a cart, 
+                apply tiered discounts and 6% tax, generate an invoice, and log each order to transactions.csv with a unique timestamped ID.
               </p>
               <ul class="badges">
                 <li>Java</li><li>Event-Driven</li><li>CSV I/O</li><li>Discounts/Tax</li><li>Transactions Log</li>
