Update project1.html project 2 button title update

--- a/project1.html
+++ b/project1.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a class="nav-pill" href="index.html">Home</a></li>
         <li><a class="nav-pill" href="project1.html" aria-current="page">EDESim</a></li>
-        <li><a class="nav-pill" href="project2.html">Project 2</a></li>
+        <li><a class="nav-pill" href="project2.html">TAM</a></li>
       </ul>
     </nav>
   </header>
