headshot upload attempt

--- a/project2.html
+++ b/project2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Tiny Accumulator Machine (TAM) — Two-Word Instruction VM in C — Sthefanny Silva" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
   <title>Tiny Accumulator Machine (TAM) — Sthefanny Silva</title>
 </head>
 <body>
