--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Event-Driven Enterprise Simulator (EDESim) — Sthefanny Silva" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
   <title>Event-Driven Enterprise Simulator — Sthefanny Silva</title>
 </head>
 <body>
