--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main id="content" class="layout" role="main">
     <!-- Sidebar (photo + contacts) -->
     <aside class="sidebar" aria-labelledby="contact-heading">
-      <img src="assets/images/headshot.jpg.PNG" alt="Headshot of Sthefanny Silva" class="headshot" />
+      <img src="assets/images/headshot.PNG" alt="Headshot of Sthefanny Silva" class="headshot" />
 
       <section class="contact" aria-labelledby="contact-heading">
         <h2 id="contact-heading">Contact</h2>
@@ -92,7 +92,7 @@
 
         <div class="project-grid">
           <!-- Project 1 -->
-          <a class="project-tile" href="project1.html">
+          <article class="project-tile">
             <img src="assets/images/project1.jpg" alt="EDESim preview" width="110" height="70" />
             <div>
               <h3><a href="project1.html">Event-Driven Enterprise Simulator (EDESim)</a></h3>
@@ -106,10 +106,10 @@
                 <li>Java</li><li>Event-Driven</li><li>CSV I/O</li><li>GitHub Pages</li>
               </ul>
             </div>
-          </a>
+          </article>
 
           <!-- Project 2 -->
-          <a class="project-tile" href="project2.html">
+          <article class="project-tile" href="project2.html">
             <img src="assets/images/project2.jpg" alt="TAM diagram" width="110" height="70" />
             <div>
               <h3><a href="project2.html">Tiny Accumulator Machine (TAM)</a></h3>
@@ -119,7 +119,8 @@
                 <li>C</li><li>Virtual Machine</li><li>Two-Word ISA</li><li>Emulator</li>
               </ul>
             </div>
-          </a>
+          </article>
+          
         </div>
       </section>
     </section>
