--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main id="content" class="layout" role="main">
     <!-- Sidebar (photo + contacts) -->
     <aside class="sidebar" aria-labelledby="contact-heading">
-      <img src="C:\Users\sthef\OneDrive\Documentos\GitHub\sthef-silva.github.io\assets\css\images\headshot.PNG" alt="Headshot of Sthefanny Silva" class="headshot" />
+      <img src="assets\css\images\headshot.PNG" alt="Headshot of Sthefanny Silva" class="headshot" />
 
       <section class="contact" aria-labelledby="contact-heading">
         <h2 id="contact-heading">Contact</h2>
