--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="project-grid">
           <!-- Project 1 -->
           <article class="project-tile">
-            <img src="assets/images/project1.jpg" alt="EDESim preview" width="110" height="70" />
+            <img src="assets\css\images\project1_homepage.png" alt="EDESim preview" width="110" height="70" />
             <div>
               <h3><a href="project1.html">Event-Driven Enterprise Simulator (EDESim)</a></h3>
               <p>
