--- a/project1.html
+++ b/project1.html
@@ -34,7 +34,7 @@
       <figure class="project-figure">
         <!--TODO: Upload Images-->
 
-        <img src="assets/images/project1.jpg" alt="Image illustrating Project 1" />
+        <img src="assets\css\images\project1_projectpage.png" alt="Image illustrating Project 1" />
         <figcaption>Simulates enterprise workflows using an event queue, resources, and processing times.</figcaption>
   </figure>
 
