narrow design updates

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main id="content" class="layout" role="main">
+  <main id="content" class="narrow" role="main">
     <!-- Sidebar (photo + contacts) -->
     <aside class="sidebar" aria-labelledby="contact-heading">
       <img src="assets\css\images\headshot.PNG" alt="Headshot of Sthefanny Silva" class="headshot" />
