--- a/project2.html
+++ b/project2.html
@@ -50,18 +50,164 @@
       </section>
 
       <!-- Try-it demo (browser-hosted page in the TAM repo) -->
+<!doctype html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Tiny Accumulator Machine (TAM) — Two-Word Instruction VM in C — Sthefanny Silva" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
+  <title>Tiny Accumulator Machine (TAM) — Sthefanny Silva</title>
+</head>
+<body>
+  <a class="skip-link" href="#content">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="brand">
+      <h1 class="site-title">Tiny Accumulator Machine (TAM)</h1>
+    </div>
+
+    <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
+      <ul>
+        <li><a class="nav-pill" href="index.html">Home</a></li>
+        <li><a class="nav-pill" href="project1.html">EDESim</a></li>
+        <li><a class="nav-pill" href="project2.html" aria-current="page">TAM</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main id="content" class="narrow" role="main">
+    <article class="project">
+      <header>
+        <h2>Systems Programming • 2025</h2>
+      </header>
+
+      <figure class="project-figure">
+        <!-- Replace with a TAM screenshot/diagram if you have one -->
+        <img src="assets/images/project2.jpg" alt="Diagram of Tiny Accumulator Machine: PC, ACC, RAM, and instruction format" />
+        <figcaption>Two-word instruction virtual machine: <em>opcode</em> + <em>operand</em>, with PC, ACC, RAM, and basic control flow.</figcaption>
+      </figure>
+
+      <section aria-labelledby="p2-desc" class="card">
+        <h3 id="p2-desc">Description</h3>
+        <p>
+          A minimal virtual machine written in C that executes a Tiny Accumulator Machine (TAM)
+          instruction set. Each instruction is two words—an <strong>opcode</strong> and an <strong>operand</strong>.
+          The VM maintains a <strong>program counter (PC)</strong>, <strong>accumulator (ACC)</strong>, and
+          memory. It supports arithmetic and control-flow (e.g., <code>LOAD</code>, <code>STORE</code>,
+          <code>ADD</code>, <code>SUB</code>, <code>JMP</code>, <code>JZ</code>) and halts on <code>HALT</code>.
+          Programs are loaded from a simple text/binary format and executed step-by-step with clear
+          state updates.
+        </p>
+      </section>
+
+      <!-- =================== NEW DEMO (reads program + output from TAM repo) =================== -->
       <section class="card" aria-labelledby="demo-heading">
         <h3 id="demo-heading">Try the Simulator</h3>
-        <p class="disclaimer" role="note">“Prototype demo – does not reflect final implementation or performance.”</p>
-        <div class="embed">
-          <iframe
-            src="https://sthef-silva.github.io/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/web-demo/"
-            title="TAM — Web Demo"
-            loading="lazy">
-          </iframe>
+        <p class="disclaimer" role="note">Prototype demo — reads the <em>program</em> and <em>output</em> from the TAM repo.</p>
+
+        <!-- Program picker -->
+        <div style="display:flex; gap:.5rem; align-items:center; margin:.25rem 0 1rem;">
+          <label for="program-select"><strong>Program file:</strong></label>
+          <select id="program-select">
+            <!-- Change these to match actual files in the repo -->
+            <option value="program.txt">program.txt</option>
+            <option value="sample_program.txt">sample_program.txt</option>
+          </select>
+          <a id="open-program" class="nav-pill" href="#" target="_blank" rel="noopener">Open on GitHub</a>
         </div>
-        <p><small>If the embed doesn’t load, <a class="nav-pill" href="https://sthef-silva.github.io/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/web-demo/" target="_blank" rel="noopener">open it in a new tab</a>.</small></p>
+
+        <!-- Program (input) -->
+        <h4>Program</h4>
+        <pre id="tam-program" class="codeblock">Loading program text…</pre>
+
+        <!-- Output -->
+        <h4 style="margin-top:1rem;">Output (programoutput.txt)</h4>
+        <pre id="tam-output" class="codeblock">Loading programoutput.txt…</pre>
+
+        <!-- Links -->
+        <p style="margin-top:.75rem">
+          <a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/tinyvm.c" target="_blank" rel="noopener">View tinyvm.c on GitHub</a>
+          <a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C" target="_blank" rel="noopener">Open TAM repository</a>
+        </p>
       </section>
+
+      <script>
+        // ====== configuration (edit if filenames/paths differ) ======
+        const RAW_BASE = "https://raw.githubusercontent.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/main";
+        const OUTPUT_FILE = "programoutput.txt";     // output file you committed
+        const DEFAULT_PROGRAM_FILE = "program.txt";  // must match one of the <option> values above
+        // ============================================================
+
+        const $programPre = document.getElementById("tam-program");
+        const $outputPre  = document.getElementById("tam-output");
+        const $select     = document.getElementById("program-select");
+        const $openLink   = document.getElementById("open-program");
+
+        async function loadInto(id, url){
+          const el = document.getElementById(id);
+          try{
+            const res = await fetch(url, { cache: "no-store" });
+            if(!res.ok) throw new Error(res.status + " " + res.statusText);
+            el.textContent = (await res.text()).trim();
+          }catch(err){
+            el.textContent = `Could not load ${url}\n${err.message}`;
+          }
+        }
+
+        function setProgram(fileName){
+          loadInto("tam-program", `${RAW_BASE}/${fileName}`);
+          $openLink.href = `https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/${fileName}`;
+        }
+
+        (function init(){
+          // set default program in dropdown if present
+          for (const opt of $select.options){
+            if(opt.value === DEFAULT_PROGRAM_FILE){ $select.value = DEFAULT_PROGRAM_FILE; break; }
+          }
+          setProgram($select.value);
+          loadInto("tam-output", `${RAW_BASE}/${OUTPUT_FILE}`);
+        })();
+
+        $select.addEventListener("change", () => setProgram($select.value));
+      </script>
+      <!-- ================= END NEW DEMO ================= -->
+
+      <!-- How-to (brief; readers can use the README for full details) -->
+      <section aria-labelledby="howto-heading" class="card">
+        <h3 id="howto-heading">How to Run (Repo)</h3>
+        <ol>
+          <li>Clone the repo and follow the README instructions.</li>
+          <li>Build the VM with <code>gcc</code> and run a sample program.</li>
+        </ol>
+        <p><a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C" target="_blank" rel="noopener">View source &amp; README on GitHub</a></p>
+      </section>
+
+      <section aria-labelledby="p2-skills" class="card">
+        <h3 id="p2-skills">Skills Used &amp; Learned</h3>
+        <ul>
+          <li>C programming (pointers, structs, file I/O)</li>
+          <li>Virtual machine &amp; ISA design (two-word instructions)</li>
+          <li>Execution state: PC, ACC, memory, halt conditions</li>
+          <li>Control flow &amp; branching (JMP/JZ), arithmetic ops</li>
+          <li>Input parsing (program loader) and error handling</li>
+          <li>CLI UX &amp; documentation (README, examples)</li>
+          <li>Version control &amp; hosting (Git, GitHub Pages iframe demo)</li>
+        </ul>
+      </section>
+    </article>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <p>© <span id="year"></span> Sthefanny Silva</p>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
+
 
       <!-- How-to (keep brief; readers can use the README for full details) -->
       <section aria-labelledby="howto-heading" class="card">
