project 2 demo update

--- a/project2.html
+++ b/project2.html
@@ -52,7 +52,7 @@
       <!-- Try-it demo (browser-hosted page in the TAM repo) -->
        <section class="card" aria-labelledby="demo-heading">
         <h3 id="demo-heading">Try the Simulator</h3>
-        <p class="disclaimer" role="note">Prototype demo — reads <em>Program</em> and <em>PROGRAMOUTPUT.txt</em> from the repo.</p>
+        <p class="disclaimer" role="note">“Prototype demo – does not reflect final implementation or performance.”</p>
 
         <div style="display:flex; gap:.5rem; align-items:center; margin:.25rem 0 1rem;">
           <label for="program-select"><strong>Program file:</strong></label>
@@ -66,9 +66,6 @@
 
         <h4>Program</h4>
         <pre id="tam-program" class="codeblock">Loading program text…</pre>
-
-        <h4 style="margin-top:1rem;">Output (PROGRAMOUTPUT.txt)</h4>
-        <pre id="tam-output" class="codeblock">Loading PROGRAMOUTPUT.txt…</pre>
 
         <p style="margin-top:.75rem">
           <a class="nav-pill" href="https://github.com/sthef-silva/Tiny-Accumulator-Machine--TAM----Two-Word-Instruction-VM-in-C/blob/main/tinyvm.c" target="_blank" rel="noopener">View tinyvm.c</a>
