project 2 demo update + images

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <!-- Project 2 -->
           <article class="project-tile" href="project2.html">
-            <img src="assets/images/project2.jpg" alt="TAM diagram" width="110" height="70" />
+            <img src="assets\css\images\project2.jpg" alt="TAM diagram" width="110" height="70" />
             <div>
               <h3><a href="project2.html">Tiny Accumulator Machine (TAM)</a></h3>
               <p>Implemented a Tiny Accumulator Machine (TAM) virtual machine in C using a two-word instruction set (opcode + operand). 
