--- a/project2.html
+++ b/project2.html
@@ -32,7 +32,7 @@
 
       <figure class="project-figure">
         <!-- Replace with a TAM screenshot/diagram -->
-        <img src="assets/images/project2.jpg" alt="Diagram of Tiny Accumulator Machine: PC, ACC, RAM, and instruction format" />
+        <img src="assets\css\images\project2.jpg" alt="Diagram of Tiny Accumulator Machine: PC, ACC, RAM, and instruction format" />
         <figcaption>Two-word instruction virtual machine: <em>opcode</em> + <em>operand</em>, with PC, ACC, RAM, and basic control flow.</figcaption>
       </figure>
 
